--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter*{Köszönetnyilvánítás}\addcontentsline{toc}{chapter}{Köszönetnyilvánítás}
+\chapter*{Acknowledgement}\addcontentsline{toc}{chapter}{Acknowledgement}
 %----------------------------------------------------------------------------
 
-Ez nem kötelezõ, akár törölhetõ is. Ha a szerzõ szükségét érzi, itt lehet köszönetet nyilvánítani azoknak, akik hozzájárultak munkájukkal ahhoz, hogy a hallgató a szakdolgozatban vagy diplomamunkában leírt feladatokat sikeresen elvégezze. A konzulensnek való köszönetnyilvánítás sem kötelezõ, a konzulensnek hivatalosan is dolga, hogy a hallgatót konzultálja.
+I would like to acknowledge my friend Blumenschein Volfram for helping me by checking my work for grammatical errors.
