--- a/thesis/diploma.tex
+++ b/thesis/diploma.tex
@@ -113,6 +113,7 @@
 \includeonly{
 	guideline,%
 	project,%
+	projecteng,%
 	titlepage,%
 	declaration,%
 	abstract,%
@@ -120,6 +121,7 @@
 	chapter1,%
 	chapter2,%
 	chapter3,%
+	chapter4,%
 	acknowledgement,%
 	appendices,%
 }
@@ -143,6 +145,7 @@ aboveskip=10pt}
 \singlespacing
 %\include{guideline}
 \include{project}
+\include{projecteng}
 
 \pagenumbering{arabic}
 \onehalfspacing
@@ -154,6 +157,7 @@ aboveskip=10pt}
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
+\include{chapter4}
 \include{acknowledgement}
 
 %\listoffigures\addcontentsline{toc}{chapter}{Ábrák jegyzéke}
@@ -163,7 +167,7 @@ aboveskip=10pt}
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
 
-\include{appendices}
+%\include{appendices}
 
 \label{page:last}
 \end{document}
