--- a/thesis/mybib.bib
+++ b/thesis/mybib.bib
@@ -6,3 +6,27 @@
   month  = jul,
   note   ="URL: \url{http://hpdc.syr.edu/~chapin/cis657/lex.pdf}"
 }
+
+@MANUAL{lalr1,
+  author = "Stephen Jackson",
+  title  = "A Tutorial Explaining LALR(1) Parsing",
+  year   = 2009,
+  note   ="URL: \url{http://web.cs.dal.ca/~sjackson/lalr1.html}"
+}
+
+@phdthesis{deremer1969practical,
+  title={Practical translators for LR (k) languages},
+  author={DeRemer, Franklin L},
+  year={1969},
+  school={MIT Cambridge, Mass.}
+}
+
+@inproceedings{frost2007modular,
+  title={Modular and efficient top-down parsing for ambiguous left-recursive grammars},
+  author={Frost, Richard A and Hafiz, Rahmatullah and Callaghan, Paul C},
+  booktitle={Proceedings of the 10th International Conference on Parsing Technologies},
+  pages={109--120},
+  year={2007},
+  organization={Association for Computational Linguistics}
+}
+
